--- a/src/components/Invites/styles.module.scss
+++ b/src/components/Invites/styles.module.scss
@@ -31,11 +31,25 @@
         }
     }
 
+    & .codeContainer {
+        & p {
+            font-size: 0.8rem;
+            color: $paletteGrey3;
+            margin-bottom: 0.2rem;
+        }
+
+        & .code {
+            font-size: 0.8rem;
+            color: $paletteGreen1;
+        }
+    }
+
     & .button {
         cursor: pointer;
 
         height: 2.1rem;
-        padding: 0.5rem 2rem;
+        min-width: 6rem;
+        padding: 0.5rem 0;
 
         background: transparent;
 
