navbar bonus button label

--- a/src/components/Settings/styles.module.scss
+++ b/src/components/Settings/styles.module.scss
@@ -13,7 +13,7 @@
 
     background: $paletteGrey2;
 
-    padding: 0.5rem 1rem;
+    padding: 1rem 1rem 0;
     margin: 0 0.3rem;
 
     border-radius: 4px;
