--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -141,6 +141,26 @@
     & .functionalContainer {
         padding: 1rem 0;
 
+        & .bonusLabel {
+            position: relative;
+            top: 0.7rem;
+            left: 70%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            width: 1.5rem;
+            height: 1.5rem;
+
+            background: $paletteGreen2;
+            box-shadow: 0px 2px 4px $paletteGreen2;
+
+            border-radius: 360px;
+
+            font-size: 0.8rem;
+        }
+
         & .bonusBlock {
             width: 90%;
             margin: 0 auto;
