--- a/src/components/HistoryInstruments/styles.module.scss
+++ b/src/components/HistoryInstruments/styles.module.scss
@@ -11,7 +11,7 @@
     & .filtersContainer {
         display: grid;
         grid-template-columns: 50% 50%;
-        grid-template-rows: 50px 50px 50px;
+        grid-template-rows: 50% 50%;
         grid-row-gap: 1rem;
         grid-column-gap: 0.5rem;
 
@@ -22,38 +22,29 @@
 
         border-radius: 8px;
 
-        & .searchBar {
+        & .gameSelect {
             grid-column: 1 / 3;
             grid-row: 1;
 
-            width: 100%;
-            padding: 0 1rem;
-
-            background: $paletteGrey1;
-
-            border: none;
-            border-radius: 4px;
-
-            color: $paletteGrey3;
-        }
-
-        & .gameSelect {
-            grid-column: 1 / 3;
-            grid-row: 2;
+            align-self: start;
 
             width: 100%;
         }
 
         & .typeSelect {
             grid-column: 1;
-            grid-row: 3;
+            grid-row: 2;
+
+            align-self: start;
 
             width: 100%;
         }
 
         & .priceSort {
             grid-column: 2;
-            grid-row: 3;
+            grid-row: 2;
+
+            align-self: start;
 
             width: 100%;
         }
