--- a/src/components/HistoryInstruments/styles.module.scss
+++ b/src/components/HistoryInstruments/styles.module.scss
@@ -3,7 +3,7 @@
 .container {
     height: 670px;
     width: 400px;
-    margin-top: 30px;
+    // margin-top: 30px;
 
     display: flex;
     flex-direction: column;
@@ -11,7 +11,7 @@
     & .filtersContainer {
         display: grid;
         grid-template-columns: 50% 50%;
-        grid-template-rows: 50% 50%;
+        grid-template-rows: auto 50%;
         grid-row-gap: 1rem;
         grid-column-gap: 0.5rem;
 
