login bug fixed

--- a/src/components/_popups/market/Activation/styles.module.scss
+++ b/src/components/_popups/market/Activation/styles.module.scss
@@ -81,9 +81,14 @@
 
             & img {
                 width: 2rem;
-                min-width: 2rem;
                 height: 2rem;
+                padding: 0.2rem;
+
                 margin-right: 0.5rem;
+
+                background: #000;
+
+                border-radius: 4px;
             }
 
             & p {
