--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -20,7 +20,7 @@
 
         height: 100%;
         padding: 0 1rem;
-        margin: -0.5rem 0 0;
+        margin: -0.5rem 0;
 
         border-bottom: 2px solid $paletteGrey2;
 
@@ -67,7 +67,7 @@
     & .statsContainer {
         display: grid;
         grid-template-columns: 50% 50%;
-        grid-template-rows: 5% 45% 6% 44%;
+        grid-template-rows: 2% 45% 4% 44%;
         grid-column-gap: 0.5rem;
         align-content: center;
 
@@ -111,7 +111,7 @@
             grid-row: 1;
             grid-column: 1 / 3;
 
-            line-height: 1.5rem;
+            line-height: 0.1rem;
             font-size: 0.9rem;
 
             padding: 0 1rem;
@@ -121,7 +121,7 @@
             grid-row: 3;
             grid-column: 1;
 
-            line-height: 2.5rem;
+            line-height: 1.8rem;
             font-size: 0.9rem;
 
             padding: 0 1rem;
@@ -131,7 +131,7 @@
             grid-row: 3;
             grid-column: 2;
 
-            line-height: 2.5rem;
+            line-height: 1.8rem;
             font-size: 0.9rem;
 
             padding: 0 1rem;
