--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -26,7 +26,7 @@ body {
     }
 
     ::-webkit-scrollbar-thumb {
-        background: $paletteGrey2;
+        background: $paletteGreen1;
         border-radius: 4px;
     }
     ::-webkit-scrollbar-track {
