--- a/src/components/TopControlBar/styles.module.scss
+++ b/src/components/TopControlBar/styles.module.scss
@@ -33,9 +33,14 @@
         }
     }
 
+    & .info {
+        margin-top: 0.3rem;
+    }
+
     & .discord {
         border-right: 0.5px solid $paletteGrey3;
         padding: 0 1rem 0 0;
+        margin-top: 0.4rem;
         height: 20px;
     }
 
