--- a/src/components/FirstTimeUX/styles.module.scss
+++ b/src/components/FirstTimeUX/styles.module.scss
@@ -54,7 +54,7 @@
 
         & .text {
             width: 80%;
-            margin: 1% 0;
+            margin: 2% 0;
 
             text-align: center;
             font-size: 0.9rem;
@@ -65,7 +65,7 @@
             width: 100%;
             height: 30%;
 
-            margin: 5% 0;
+            margin: 5% 0 0;
 
             display: flex;
             justify-content: center;
@@ -76,12 +76,24 @@
             }
         }
 
+        & .imageBoxSigns {
+            width: 85%;
+
+            margin: 2% auto 3%;
+            padding-left: 0.8rem;
+
+            display: flex;
+            justify-content: space-evenly;
+
+            font-size: 1.1rem;
+        }
+
         & .bonusesContainer {
             display: flex;
             flex-direction: row;
             justify-content: center;
 
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
 
             & .bonusItem {
                 display: flex;
@@ -107,10 +119,24 @@
             }
         }
 
+        & .chooseGoalItemContainer {
+            width: 90%;
+            height: 90%;
+
+            margin: 0 auto;
+
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+
+            overflow-y: scroll;
+            overflow-x: hidden;
+        }
+
         & button {
             cursor: pointer;
 
-            margin: 3% 0;
+            margin: 1% 0 0;
             padding: 1rem 0;
 
             width: 11rem;
