--- a/src/components/MarketInstruments/styles.module.scss
+++ b/src/components/MarketInstruments/styles.module.scss
@@ -8,10 +8,12 @@
     flex-direction: column;
     justify-content: space-between;
 
+    margin: 1rem 0;
+
     & .filtersContainer {
         display: grid;
         grid-template-columns: 50% 50%;
-        grid-template-rows: 50px 50px 50px;
+        grid-template-rows: 50px auto auto;
         grid-row-gap: 1rem;
         grid-column-gap: 0.5rem;
 
@@ -30,11 +32,15 @@
             padding: 0 1rem;
 
             background: $paletteGrey1;
+            background-image: url('../../theme/svg/search.svg');
+            background-position: 7px 50%;
+            background-repeat: no-repeat;
 
             border: none;
             border-radius: 4px;
 
             color: $paletteGrey3;
+            text-indent: 1rem;
         }
 
         & .gameSelect {
@@ -62,5 +68,6 @@
     & .adContainer {
         height: 300px;
         width: 100%;
+        margin-top: 1rem;
     }
 }
