--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -199,7 +199,8 @@
 
             & .nickname {
                 display: block;
-                width: 5rem;
+                width: 4.8rem;
+                margin: 0 0.1rem;
                 overflow: hidden;
                 white-space: nowrap;
                 text-overflow: ellipsis;
