--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -18,7 +18,7 @@ body {
     max-width: 100vw;
     max-height: 100vh;
     background: $paletteGrey1;
-    font-family: Arial, Helvetica, Helvetica Neue, serif;
+    font-family: Roboto, Arial, Helvetica, Helvetica Neue, serif;
     overflow: hidden;
 
     ::-webkit-scrollbar {
