--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -199,11 +199,11 @@
 
             & .nickname {
                 display: block;
-                width: 4.8rem;
-                margin: 0 0.1rem;
+                width: 5rem;
                 overflow: hidden;
                 white-space: nowrap;
                 text-overflow: ellipsis;
+                text-align: center;
 
                 color: $paletteWhite;
                 font-size: 0.8rem;
