--- a/src/components/MarketItem/styles.module.scss
+++ b/src/components/MarketItem/styles.module.scss
@@ -165,6 +165,8 @@
     padding: 0.2rem;
     margin-bottom: -1.5rem;
 
+    background: $paletteWhite;
+
     border: 1px solid $paletteGrey3;
     border-radius: 4px;
 
