--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -6,6 +6,9 @@
     box-sizing: border-box;
     outline: none;
     scroll-behavior: smooth;
+    user-select: none;
+
+    user-select: none;
 }
 
 a {
