fixes according to the OW QA report v.3.3.0

--- a/src/components/Login/styles.module.scss
+++ b/src/components/Login/styles.module.scss
@@ -100,10 +100,16 @@
         }
     }
 
+    & .signInOptions {
+        margin: 1.5rem 0 0.5rem;
+        font-size: 0.8rem;
+        color: $paletteGrey3;
+    }
+
     & .socialContainer {
         display: flex;
         justify-content: flex-start;
-        margin: 1rem 0;
+        margin: 0.5rem 0;
 
         & img {
             cursor: pointer;
