cursor onHover upd (BUFF-336)

--- a/src/components/GoalItem/styles.module.scss
+++ b/src/components/GoalItem/styles.module.scss
@@ -113,7 +113,7 @@
         }
 
         & .insufficientFunds {
-            cursor: pointer;
+            cursor: default;
             width: 50%;
 
             border: 1px solid $paletteGrey3;
