--- a/src/components/MarketItem/styles.module.scss
+++ b/src/components/MarketItem/styles.module.scss
@@ -115,7 +115,7 @@
         }
 
         & .insufficientFunds {
-            cursor: pointer;
+            cursor: default;
             width: 50%;
 
             border: 1px solid $paletteGrey3;
