--- a/src/components/TopControlBar/styles.module.scss
+++ b/src/components/TopControlBar/styles.module.scss
@@ -42,6 +42,8 @@
         padding: 0 1rem 0 0;
         margin-top: 0.4rem;
         height: 20px;
+
+        filter: brightness(0.4);
     }
 
     & .close {
